# hack-qazcode

./: .gitignore  Dockerfile  README.md  chunking_and_embedding.py  evaluate.py  parse_icd_codes.py  pyproject.toml  retrieval_and_reranking.py
data/evals/: dev_test.jsonl  dev_test_metrics.json  uno.jsonl  uno_metrics.json
data/first_result_eval/: uno.jsonl  uno_metrics.json
src/: server.py
